--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 
+<link rel="stylesheet" type="text/css" href="clear.css">
 <link rel="stylesheet" href="style.css">
-<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
 
@@ -31,7 +31,7 @@
 				<div class="panel panel-default">
 					<div class="panel-heading text-center"><h3>Singers & Bands</h3></div>
 					<div class="panel-body">
-						<!-- gif's from button click -->
+						<!-- gif's & ratings from button click -->
 						<div id="musicView" data-state="still"></div>
 					</div>
 					<div id="musicDiv"></div>
